# Transporter_proj

./: .gitignore  .gitigore  DownloadURLs.ipynb  ExplorationIdeasForNPacData.docx  FixedrefTcDoms.ipynb  README.md  log.txt  proteinQsforLab.docx  pyproject.toml  refTcDoms.ipynb
containers/: Singularity  requirements.txt
projNotes/: FutureProblemsAndPossibleSolns.docx  Transporter Project.pptx  awkRanscript.c  inititalSearchforMoreHMMS.docx
scripts/: .FIXED_Best_annotationScript.ipynb.swp  Hmm_exploration.py  TCDOMS_Best_annotationScript.ipynb  addionalHMM_download.sh  annotate_NPac.sh  best_annotation.py  best_transport_pfams.py  custom_mapping.ipynb  downloadTCDOMS_HHMS.sh  hmms_annotation.sh  log.txt  mapping_to_unique_prots file.ipynb  new_best_annoatation.py  pfams_annotate.sh  pfams_mapped_to_tc_txt_file (1).ipynb  plottingTransportPfamDist.py  tcDomsRefPlots.ipynb  tcdoms_annotate.sh  test.py
scripts/.ipynb_checkpoints/: FIXED_Best_annotationScript-checkpoint.ipynb  Hmm_exploration-checkpoint.py  InterproScanRun-checkpoint.sh  best_transport_pfams-checkpoint.py  custom_mapping-checkpoint.ipynb  downloadTCDOMS_HHMS-checkpoint.sh  mapping_to_unique_prots file-checkpoint.ipynb  tcdoms_annotate-checkpoint.sh
scripts/FINAL/: custom_mapping.ipynb  hmms_annotation.sh
scripts/TEST_SCRIPTS/: Hmm_exploration.py  best_tcdoms.py  new_best_annoatation.py  tcDomsLabPLotsDuplicates.ipynb
